# fennel-language-server

./: Cargo.toml  README.md  prek.toml  rustfmt.toml
.github/workflows/: audit.yaml  test.yaml
crates/fennel-language-server/: Cargo.toml
crates/fennel-language-server/src/: config.rs  helper.rs  main.rs  view.rs
crates/fennel-parser/: Cargo.toml
crates/fennel-parser/src/: ast.rs  errors.rs  lexer.rs  lib.rs  parser.rs  syntax.rs
crates/fennel-parser/src/ast/: bind.rs  error.rs  eval.rs  func.rs  macros.rs  models.rs  nodes.rs
crates/fennel-parser/src/parser/: bnf.rs  helper.rs  sets.rs
