[workspace]
members = ["crates/*"]
resolver = "2"
default-members = ["crates/fennel-language-server"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
clap = { version = "4.5.1", features = ["derive"] }
dashmap = "6.1.0"
ropey = "1.6.1"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "io-std", "io-util", "net", "macros"] }
tower-lsp = "0.20.0"
regex = { version = "1.10.3", default-features = false, features = ["std"] }
rowan = "0.15.15"
thiserror = "1.0.58"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
panic = "abort"
