[package]
name = "fennel-language-server"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
dashmap = { workspace = true }
fennel-parser = { path = "../fennel-parser" }
ropey = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-lsp = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
